--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,94 @@
-cmake_minimum_required(VERSION 2.8)
-project(rnn_gao_new C)
-set(rnn_gao_v2 main.c)
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+# project
+cmake_minimum_required(VERSION 3.5)
+project(rnnoise_16k LANGUAGES C)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set(CMAKE_BUILD_TYPE "Debug")
+#set(CMAKE_BUILD_TYPE "Release")
 
-include_directories(include)
-#AUX_SOURCE_DIRECTORY(. DIR_SRCS)
-ADD_SUBDIRECTORY(src)
+#set(CMAKE_C_STANDARD 17)
+include(GNUInstallDirs)
 
-add_executable(rnn_gao_new main.c)
-target_link_libraries(rnn_gao_new rnnLib -lm)
+# ---[ RNNoise version
+set(RNNOISE_TARGET_VERSION   "1.0.0"  CACHE STRING "RNNoise logical version")
+set(RNNOISE_TARGET_SOVERSION "1"      CACHE STRING "RNNoise soname version")
+add_definitions(-DRNNOISE_VERSION=${RNNOISE_TARGET_VERSION})
+
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
+
+# https://www.zhihu.com/question/27090458
+# https://blog.csdn.net/m0_37870649/article/details/109139204
+option(RNNOISE_BUILD_FAST "build lib & binary with gcc -Ofast optimization" OFF)
+option(RNNOISE_BUILD_SHARED_LIBS "build shared or static lib" OFF)
+option(RNNOISE_BUILD_TEST_COVERAGE "build lib & binary for test coverage" OFF)
+option(RNNOISE_BUILD_ASAN "build lib & binary for asan analysis" OFF)
+option(RNNOISE_BUILD_FOR_GPROF "build lib & binary for gprof analysis" OFF)
+
+# --- [ Add some build optimization
+if (RNNOISE_BUILD_FAST)
+    message(STATUS "Build with gcc -Ofast optimization")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -Wall")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Ofast -Wall")
+else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall -g")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -g")
+endif()
+
+if (RNNOISE_BUILD_TEST_COVERAGE)
+    message(STATUS "Add flags in build for test coverage")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage -fPIC")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-arcs -ftest-coverage -fPIC")
+endif()
+
+if (RNNOISE_BUILD_ASAN)
+    message(STATUS "Add flags in build for asan analysis")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize-recover=address -fno-var-tracking -fno-omit-frame-pointer -fno-stack-protector")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -fsanitize-recover=address -fno-var-tracking -fno-omit-frame-pointer -fno-stack-protector")
+endif()
+
+if(RNNOISE_BUILD_FOR_GPROF)
+    message(STATUS "Add '-pg' in build for gprof analysis")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pg")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
+endif()
+
+set(LIBRNNOISE rnnoise)
+
+file(GLOB_RECURSE LIBRNNOISE_SRCS    ${CMAKE_HOME_DIRECTORY}/src/*.c)
+
+if(RNNOISE_BUILD_SHARED_LIBS)
+    add_library(${LIBRNNOISE} SHARED ${LIBRNNOISE_SRCS})
+else()
+    add_library(${LIBRNNOISE} STATIC ${LIBRNNOISE_SRCS})
+endif()
+target_include_directories(${LIBRNNOISE} PUBLIC ${CMAKE_HOME_DIRECTORY}/include/)
+
+# --- [ Build samples
+file (GLOB SAMPLE_SRCS   ${CMAKE_HOME_DIRECTORY}/samples/*.c)
+foreach (source ${SAMPLE_SRCS})
+  get_filename_component(name ${source} NAME_WE)
+  add_executable(${name} ${source})
+  target_include_directories(${name} PRIVATE ${CMAKE_HOME_DIRECTORY}/include/)
+  target_link_libraries(${name} PUBLIC ${LIBRNNOISE} -lm)
+endforeach ()
+
+# --- [ Install
+
+# ---[ Install options
+if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+    set(CMAKE_INSTALL_PREFIX "${PROJECT_BINARY_DIR}/install" CACHE PATH "Default install path" FORCE)
+endif()
+
+# get header files
+file(GLOB LIBRNNOISE_HDRS   ${CMAKE_HOME_DIRECTORY}/include/*.h)
+
+set_target_properties(${LIBRNNOISE} PROPERTIES
+        VERSION   ${RNNOISE_TARGET_VERSION}
+        SOVERSION ${RNNOISE_TARGET_SOVERSION})
+install(TARGETS ${LIBRNNOISE} EXPORT RNNoiseTargets DESTINATION ${CMAKE_INSTALL_LIBDIR})
+
+install(FILES ${LIBRNNOISE_HDRS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+
+set(RNNOISE_SAMPLES rnnoise_sample rnnvad_sample)
+install(TARGETS ${RNNOISE_SAMPLES} DESTINATION ${CMAKE_INSTALL_BINDIR}/samples)
+
